<resources>
    <string name="app_name">b001e0</string>
    <string name="title_screen">B001e0</string>
    <string name="start_button">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Login</string>
    <string name="enter_name_button">Set Name</string>
    <string name="create_account">Create New Account</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="create_account_button">Create</string>
    <string name="login_button">Login</string>
    <string name="welcome">Welcome</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="profile">Profile</string>
    <string name="local_game">Play Local</string>
    <string name="online_game">Play Online</string>
    <string name="find_game">Choose Game Type</string>
    <string name="player1">Player 1 Name:</string>
    <string name="player2">Player 2 Name:</string>
    <string name="change_password">Change Password</string>
    <string name="instructions">How to Play</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
</resources>
