<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_game"
        android:textSize="30sp"/>
    <Button
        android:id="@+id/game_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_game"/>
    <Button
        android:id="@+id/game_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online_game"/>
</LinearLayout>